//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.bicloin.hub.grpc;

message BalanceRequest {
  string code = 1;
}

message BalanceResponse {
	int32 balance = 1;
}

message TopUpRequest {
  string code = 1;
  int32 amount = 2;
  string phone = 3;
}

message TopUpResponse {
	int32 balance = 1;
}

message InfoStationRequest {
  string code = 1;
}

message InfoStationResponse {
	string name = 1;
  double latitude = 2;
  double longitude = 3;
  int32 dockCapacity = 4;
  int32 prize = 5;
  int32 availableBikes= 6;
  int32 up = 7;
  int32 down = 8;
}

message LocateStationRequest {
  double latitude = 1;
  double longitude = 2;
  int32 k = 3;
}

message LocateStationResponse {
	repeated string stationsInfo = 1;
}

message BikeRequest {
  string userCode = 1;
  double userLatitude = 2;
  double userLongitude = 3;
  string stationCode = 4;
}

message BikeResponse {
}

message PingHubRequest {
}

message PingHubResponse {
	string status = 1;
}

message SysStatusRequest {
}

message SysStatusResponse {
  repeated ServerStatus serversStatus = 1;
}
  
message ServerStatus {
  string path = 1;
  string status = 2;
}

service HubService {
  rpc balance(BalanceRequest) returns (BalanceResponse);
  rpc topUp(TopUpRequest) returns (TopUpResponse);
  rpc infoStation(InfoStationRequest) returns (InfoStationResponse);
  rpc locateStation(LocateStationRequest) returns (LocateStationResponse);
  rpc bikeUp(BikeRequest) returns (BikeResponse);
  rpc bikeDown(BikeRequest) returns (BikeResponse);
  rpc ping(PingHubRequest) returns (PingHubResponse);
  rpc sysStatus(SysStatusRequest) returns (SysStatusResponse);
}
